leptos_macro/tests/view/13_multiple_generic_params_first_wrong_type.stderr
error[E0599]: the method `__check_fun_a` exists for struct `InnerProps<bool, {closure@$DIR/tests/view/13_multiple_generic_params_first_wrong_type.rs:11:37: 11:39}>`, but its trait bounds were not satisfied
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:11:26
   |
11 |             <Inner fun_a=true fun_b=|| 42/>
   |                          ^^^^
...
16 | #[component]
   | ------------ method `__check_fun_a` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:19:8
   |
16 | #[component]
   | ------------
...
19 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
